fix company-name alignment

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -72,6 +72,8 @@ body {
 	margin:0px auto;
 	text-align:center;
 	display:table;
+	float: left;
+	width: 100%;
 }
 
 header.bk-header, .nav {
@@ -150,7 +152,6 @@ header.bk-header {
         float:none;
         max-width: 1400px;
         margin: 0px auto;
-        display: inline-block;
         .logo, .companyname {
             text-align: center;
             float:none;
@@ -158,7 +159,9 @@ header.bk-header {
         .logo {
             margin-top:40px;
         }
-
+        .companyname {
+        	width: 100%;
+        }
         .companyname a {
             display: block;
             font-family: @font-swatch10-font-family;
